variables.Variables.scala.error
Compilation error:
Variables:4: error: value ++ is not a member of Int
  step++
      ^Variables:11: error: value -- is not a member of Int
  step--
      ^